# NN-chedy

cpp2/: .gitignore  CMakeLists.txt
cpp2/config/: classify.json  train.json
cpp2/include/: dataset.hpp  layer.hpp  main.hpp  matrix.hpp  neuron.hpp  nn.hpp  numberimage.hpp
cpp2/include/utils/: math.hpp  misc.hpp
cpp2/src/: classify.cpp  csvreader.cpp  dataset.cpp  layer.cpp  main.cpp  matrix.cpp  neuron.cpp  numberimage.cpp  train.cpp
cpp2/src/nn/: backprop.cpp  feedforward.cpp  nn.cpp  seterrors.cpp  train.cpp
cpp2/src/utils/: math.cpp  misc.cpp
cpp2/test/: layer_test.cpp  main_test.cpp  matrix_test.cpp  neuron_test.cpp
